@@ -89,12 +89,6 @@ pentagon_unattached_port( void )
   return spectrum_unattached_port( 3 );
 }
 
-static libspectrum_byte
-pentagon_read_screen_memory( libspectrum_word offset )
-{
-  return RAM[ memory_current_screen ][offset];
-}
-
 static libspectrum_dword
 pentagon_contend_port( libspectrum_word port GCC_UNUSED )
 {
@@ -123,7 +117,6 @@ pentagon_init( fuse_machine_info *machine )
   error = machine_set_timings( machine ); if( error ) return error;
 
   machine->timex = 0;
-  machine->ram.read_screen    = pentagon_read_screen_memory;
   machine->ram.contend_port   = pentagon_contend_port;
   machine->ram.contend_delay  = pentagon_contend_delay;
 
