@@ -71,7 +71,6 @@ int spec16_init( fuse_machine_info *machine )
   error = machine_set_timings( machine ); if( error ) return error;
 
   machine->timex = 0;
-  machine->ram.read_screen    = spec48_read_screen_memory;
   machine->ram.contend_port   = spec48_contend_port;
   machine->ram.contend_delay  = spec48_contend_delay;
 
