@@ -50,7 +50,6 @@ int specplus2_init( fuse_machine_info *machine )
   error = machine_set_timings( machine ); if( error ) return error;
 
   machine->timex = 0;
-  machine->ram.read_screen	     = spec128_read_screen_memory;
   machine->ram.contend_port	     = spec128_contend_port;
   machine->ram.contend_delay	     = spec128_contend_delay;
 
